Added Bowtie2 to windows